tdf#141135 notebookbar: use radio buttons instead of checkboxes
I mean of course in the places where mutually exclusive options
are side by side.

I mainly searched in menu.xml where menu:style="radio",
and then changed the notebookbar menu items to do the same thing.
It was all done by hand, unfortunately.

Before testing, ensure you have no customized notebookbars:
rm instdir/user/config/soffice.cfg/modules/*/ui/*

git grep -B10 '.uno:NormalView\|.uno:BrowseView' *.ui | grep -A10 GtkMenuItem
git grep -B10 '.uno:PageMode\|.uno:MasterPage' *.ui | grep -A10 GtkMenuItem
git grep -B10 '.uno:.uno:PagebreakMode\|.uno:NormalViewMode' *.ui | grep -A10 GtkMenuItem
git grep -B10 '.uno:DefaultCellStyles' *.ui | grep -A10 GtkMenuItem
git grep -B10 '.uno:CommonAlign' *.ui | grep -A10 GtkMenuItem
git grep -B10 '.uno:StyleApply' *.ui | grep -A10 GtkMenuItem
git grep -B10 '.uno:TextBodyParaStyle' *.ui | grep -A10 GtkMenuItem
git grep -B10 '.uno:NumberListStyle' *.ui | grep -A10 GtkMenuItem
git grep -B10 '.uno:OutputQuality' *.ui | grep -A10 GtkMenuItem
git grep -B10 '.uno:ParaRightToLeft\|.uno:ParaLeftToRight' *.ui | grep -A10 GtkMenuItem
git grep -B10 .uno:SpacePara *.ui | grep -A10 GtkMenuItem

git log -p -1 | grep '^+' | grep -v GtkRadioMenuItem

Change-Id: Ia2e29a6541fed66f4bcb0936d715969994671e65
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154337
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>

--- a/sc/uiconfig/scalc/ui/notebookbar.ui
+++ b/sc/uiconfig/scalc/ui/notebookbar.ui
@@ -1923,14 +1923,14 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <child>
-      <object class="GtkMenuItem" id="MenuView-PagebreakMode">
+      <object class="GtkRadioMenuItem" id="MenuView-PagebreakMode">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:PagebreakMode</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuView-NormalViewMode">
+      <object class="GtkRadioMenuItem" id="MenuView-NormalViewMode">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:NormalViewMode</property>
