--- a/sc/uiconfig/scalc/ui/notebookbar_groupedbar_compact.ui
+++ b/sc/uiconfig/scalc/ui/notebookbar_groupedbar_compact.ui
@@ -1570,14 +1570,14 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <child>
-      <object class="GtkMenuItem" id="MenuParagraph-ParaLeftToRight">
+      <object class="GtkRadioMenuItem" id="MenuParagraph-ParaLeftToRight">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:ParaLeftToRight</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuParagraph-ParaRightToLeft">
+      <object class="GtkRadioMenuItem" id="MenuParagraph-ParaRightToLeft">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:ParaRightToLeft</property>
@@ -1610,21 +1610,21 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuParagraph-CommonAlignTop">
+      <object class="GtkRadioMenuItem" id="MenuParagraph-CommonAlignTop">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:CommonAlignTop</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuParagraph-CommonAlignVerticalCenter">
+      <object class="GtkRadioMenuItem" id="MenuParagraph-CommonAlignVerticalCenter">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:CommonAlignVerticalCenter</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuParagraph-CommonAlignBottom">
+      <object class="GtkRadioMenuItem" id="MenuParagraph-CommonAlignBottom">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:CommonAlignBottom</property>
@@ -1987,7 +1987,7 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Default">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Default">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:DefaultCellStyles</property>
@@ -2000,21 +2000,21 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Accent1">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Accent1">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:Accent1CellStyles</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Accent2">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Accent2">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:Accent2CellStyles</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Accent3">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Accent3">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:Accent3CellStyles</property>
@@ -2027,14 +2027,14 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Header1">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Header1">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:Heading1CellStyles</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Header2">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Header2">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:Heading2CellStyles</property>
@@ -2047,35 +2047,35 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Good">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Good">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:GoodCellStyles</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Bad">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Bad">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:BadCellStyles</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Neutral">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Neutral">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:NeutralCellStyles</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Error">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Error">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:ErrorCellStyles</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Warning">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Warning">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:WarningCellStyles</property>
@@ -2088,14 +2088,14 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Footnote">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Footnote">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:FootnoteCellStyles</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Note">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Note">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:NoteCellStyles</property>
@@ -2364,14 +2364,14 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <child>
-      <object class="GtkMenuItem" id="MenuView-NormalViewMode">
+      <object class="GtkRadioMenuItem" id="MenuView-NormalViewMode">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:NormalViewMode</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuView-PagebreakMode">
+      <object class="GtkRadioMenuItem" id="MenuView-PagebreakMode">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:PagebreakMode</property>
