--- a/sc/uiconfig/scalc/ui/notebookbar_groupedbar_full.ui
+++ b/sc/uiconfig/scalc/ui/notebookbar_groupedbar_full.ui
@@ -2227,14 +2227,14 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <child>
-      <object class="GtkMenuItem" id="MenuParagraph-ParaLeftToRight">
+      <object class="GtkRadioMenuItem" id="MenuParagraph-ParaLeftToRight">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:ParaLeftToRight</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuParagraph-ParaRightToLeft">
+      <object class="GtkRadioMenuItem" id="MenuParagraph-ParaRightToLeft">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:ParaRightToLeft</property>
@@ -2267,21 +2267,21 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuParagraph-CommonAlignTop">
+      <object class="GtkRadioMenuItem" id="MenuParagraph-CommonAlignTop">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:CommonAlignTop</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuParagraph-CommonAlignVerticalCenter">
+      <object class="GtkRadioMenuItem" id="MenuParagraph-CommonAlignVerticalCenter">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:CommonAlignVerticalCenter</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuParagraph-CommonAlignBottom">
+      <object class="GtkRadioMenuItem" id="MenuParagraph-CommonAlignBottom">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:CommonAlignBottom</property>
@@ -2573,7 +2573,7 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Default">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Default">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:StyleApply?Style:string=Default&amp;FamilyName:string=CellStyles</property>
@@ -2587,7 +2587,7 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Accent1">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Accent1">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:StyleApply?Style:string=Accent 1&amp;FamilyName:string=CellStyles</property>
@@ -2595,7 +2595,7 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Accent2">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Accent2">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:StyleApply?Style:string=Accent 2&amp;FamilyName:string=CellStyles</property>
@@ -2603,7 +2603,7 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Accent3">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Accent3">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:StyleApply?Style:string=Accent 3&amp;FamilyName:string=CellStyles</property>
@@ -2617,7 +2617,7 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Header1">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Header1">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:StyleApply?Style:string=Heading 1&amp;FamilyName:string=CellStyles</property>
@@ -2625,7 +2625,7 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Header2">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Header2">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:StyleApply?Style:string=Heading 2&amp;FamilyName:string=CellStyles</property>
@@ -2639,7 +2639,7 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Bad">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Bad">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:StyleApply?Style:string=Bad&amp;FamilyName:string=CellStyles</property>
@@ -2647,7 +2647,7 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Good">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Good">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:StyleApply?Style:string=Good&amp;FamilyName:string=CellStyles</property>
@@ -2655,7 +2655,7 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Neutral">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Neutral">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:StyleApply?Style:string=Neutral&amp;FamilyName:string=CellStyles</property>
@@ -2663,7 +2663,7 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Error">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Error">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:StyleApply?Style:string=Error&amp;FamilyName:string=CellStyles</property>
@@ -2671,7 +2671,7 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Warning">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Warning">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:StyleApply?Style:string=Warning&amp;FamilyName:string=CellStyles</property>
@@ -2685,7 +2685,7 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Footnote">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Footnote">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:StyleApply?Style:string=Footnote&amp;FamilyName:string=CellStyles</property>
@@ -2693,7 +2693,7 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuStyle-Note">
+      <object class="GtkRadioMenuItem" id="MenuStyle-Note">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:StyleApply?Style:string=Note&amp;FamilyName:string=CellStyles</property>
@@ -2983,14 +2983,14 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <child>
-      <object class="GtkMenuItem" id="MenuView-PagebreakMode">
+      <object class="GtkRadioMenuItem" id="MenuView-PagebreakMode">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:PagebreakMode</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuView-NormalViewMode">
+      <object class="GtkRadioMenuItem" id="MenuView-NormalViewMode">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:NormalViewMode</property>
