--- a/sd/uiconfig/simpress/ui/notebookbar_groupedbar_compact.ui
+++ b/sd/uiconfig/simpress/ui/notebookbar_groupedbar_compact.ui
@@ -2026,14 +2026,14 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <child>
-      <object class="GtkMenuItem" id="ParaLeftToRightD">
+      <object class="GtkRadioMenuItem" id="ParaLeftToRightD">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:ParaLeftToRight</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="ParaRightToLeftD">
+      <object class="GtkRadioMenuItem" id="ParaRightToLeftD">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:ParaRightToLeft</property>
@@ -2066,21 +2066,21 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="SpacePara1D">
+      <object class="GtkRadioMenuItem" id="SpacePara1D">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:SpacePara1</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="SpacePara15D">
+      <object class="GtkRadioMenuItem" id="SpacePara15D">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:SpacePara15</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="SpacePara2D">
+      <object class="GtkRadioMenuItem" id="SpacePara2D">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:SpacePara2</property>
@@ -2393,28 +2393,28 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <child>
-      <object class="GtkMenuItem" id="MenuView-NormalMultiPaneGUI">
+      <object class="GtkRadioMenuItem" id="MenuView-NormalMultiPaneGUI">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:NormalMultiPaneGUI</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuView-OutlineMode">
+      <object class="GtkRadioMenuItem" id="MenuView-OutlineMode">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:OutlineMode</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuView-NotesMode">
+      <object class="GtkRadioMenuItem" id="MenuView-NotesMode">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:NotesMode</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuView-DiaMode">
+      <object class="GtkRadioMenuItem" id="MenuView-DiaMode">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:DiaMode</property>
@@ -2427,21 +2427,21 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuView-SlideMasterPage">
+      <object class="GtkRadioMenuItem" id="MenuView-SlideMasterPage">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:SlideMasterPage</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuView-NotesMasterPage">
+      <object class="GtkRadioMenuItem" id="MenuView-NotesMasterPage">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:NotesMasterPage</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuView-HandoutMode">
+      <object class="GtkRadioMenuItem" id="MenuView-HandoutMode">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:HandoutMode</property>
@@ -2556,14 +2556,14 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuView-OutputQualityColor">
+      <object class="GtkRadioMenuItem" id="MenuView-OutputQualityColor">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:OutputQualityColor</property>
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuView-OutputQualityGrayscale">
+      <object class="GtkRadioMenuItem" id="MenuView-OutputQualityGrayscale">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:OutputQualityGrayscale</property>
